k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btsx-service
  namespace: btsx
spec:
  type: ClusterIP
  selector:
    app: btsx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
